格式优化